--- a/index.html
+++ b/index.html
@@ -40,9 +40,11 @@
         Loading...
       </div>
     </div>
+    <div id="mapDiv" style="width:800px; height:600px"></div>
     <script>
       window.onload = initAll;
       var tips;
+      var startPosition;
       function initAll() {
         tips = document.getElementById("tips");
         hideTip();
@@ -60,7 +62,12 @@
       }
 
       function getCurrentPostion() {
-        navigator.geolocation.getCurrentPosition(successCallback, errorCallback);
+        var options = {
+          enableHighAccuracy: true,
+          timeout: 5000,
+          maximumAge: 0
+        };
+        navigator.geolocation.getCurrentPosition(successCallback, errorCallback, options);
       }
 
       function showLoading() {
@@ -73,13 +80,28 @@
 
       function successCallback(position) {
         hideLoading();
+        startPosition = position;
         document.getElementById("startLat").innerHTML = position.coords.latitude;
         document.getElementById("startLon").innerHTML = position.coords.longitude;
+        showOnMap();
       }
 
       function errorCallback(error) {
         hideLoading();
-        console.log("Error occured. Error code: ", error.code);
+        switch (error.code) {
+          case error.PERMISSION_DENIED:
+            showTip("User denied the request for Geolocation.");
+            break;
+          case error.POSITION_UNAVAILABLE:
+            showTip("Location information is unavailable.");
+            break;
+          case error.TIMEOUT:
+            showTip("The request to get user location timed out.");
+            break;
+          case error.UNKNOWN_ERROR:
+            showTip("An unknown error occurred.");
+            break;
+        }
       }
 
       function showTip(message) {
@@ -89,6 +111,26 @@
       function hideTip() {
         tips.style.display = "none";
         tips.innerHTML = "";
+      }
+
+      function showOnMap() {
+        loadScript();
+      }
+
+      function loadScript() {
+        var script = document.createElement("script");
+        script.type = "text/javascript";
+        script.src = "http://webapi.amap.com/maps?v=1.3&key=97b27bfcd3d40ec66b150c4acb673034&callback=initMap";
+        document.body.appendChild(script);
+      }
+
+      function initMap() {
+        var map = new AMap.Map(mapDiv, {
+          view: new AMap.View2D({
+            center: new AMap.LngLat(startPosition.coords.longitude, startPosition.coords.latitude),
+            zoom: 15
+          })
+        });
       }
     </script>
   </body>
